--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,26 +1,19 @@
 {
   "name": "db",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
-  "description": "",
+  "module": "index.ts",
+  "type": "module",
+  "private": true,
   "devDependencies": {
-    "@types/node": "^25.3.0",
+    "@types/bun": "latest",
     "@types/pg": "^8.16.0",
-    "prisma": "^7.4.1",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
-    "type": "module"
+    "prisma": "^7.4.1"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
-    "dotenv": "^17.3.1",
     "pg": "^8.18.0"
   }
 }
