--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,6 +2,9 @@
   "name": "db",
   "module": "index.ts",
   "type": "module",
+  "exports": {
+    ".": "./index.ts"
+  },
   "private": true,
   "devDependencies": {
     "@types/bun": "latest",
@@ -14,6 +17,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
+    "dotenv": "^17.3.1",
     "pg": "^8.18.0"
   }
 }
